<resources>
    <!-- Main Activity strings -->
    <string name="app_name">SMProject</string>
    <string name="health_analyze">Health analyze</string>
    <string name="tasks"> Available Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="showStatistics">Show Statistics</string>
    <string name="hideStatistics">Hide Statistics</string>
    <string name="poland">Poland</string>
    <string name="global">Global</string>
    <string name="levelDisplay">LVL {0}</string>
    <string name="experienceDisplay">{0}/{1} XP</string>
    <string name="daysDisplay">{0} Tasks streak</string>
    <!-- Health Analyzer strings  -->
    <string name="start_test">Start Test</string>
    <string name="question">Question: \n{0}/{1}</string>
    <string name="stop">Stop</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="breath">Please hold your breath for as long as you can</string>
    <string name="test_info">This test will help you check if you have any of covid symptoms \n \n \n Please be aware that it is not meant to replace doctor\'s opinion, does not represend valid medical diagnosis, and should be treated with distance</string>
    <string name="no_symptoms_found">No symptoms were found</string>
    <string name="some_sympthoms">You have between 1 and 3 symptoms.</string>
    <string name="a_lot_of_sympthoms">You have at least 3 symptoms.</string>
    <string name="just_breathing">You failed breath holding test but seem to have no additional symptoms.\n You are not likely to be ill, especially if you always had trouble with holding your breath for long or are in a bad physical condition.</string>
    <string name="symptoms_and_cough">Additionally you failed the breath holding test.</string>
    <string name="call_doctor">You should definitely call the doctor</string>
    <string name="consider_doctor">Consider consulting doctor to make sure you are fine.</string>
    <string-array name="symptoms">
        <item>Have you recently suffered from: \nAches and Pains</item>
        <item>Have you recently suffered from: \n Sore throat</item>
        <item>Have you recently suffered from: \n Diarrhea</item>
        <item>Have you recently suffered from: \nConjunctivitis</item>
        <item>Have you recently suffered from: \nLoss of taste or smell</item>
        <item>Have you recently suffered from: \nTiredness</item>
        <item>Have you recently suffered from: \nFever (over 37.7 C)</item>
        <item>Have you recently suffered from: \nCough</item>
    </string-array>
    <!-- Tasks strings -->
    <string name="take">Take Task</string>
    <!-- User Panel strings -->
    <string name="username">Username: {0}</string>
    <string name="completedTasks">Completed Tasks: {0}</string>
    <string name="tasksStreak">Tasks Streak: {0}</string>
    <string name="lastTaskCompletedOn">Last Task Completed On: {0}</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wen">WEN</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="startIsolation">Start Isolation</string>
    <string name="stopIsolation">Stop Isolation</string>
    <string name="last_task_completed_on">Last Task Completed On:</string>
    <string name="completed_tasks">Completed Tasks:</string>
    <string name="tasks_streak">Tasks Streak:</string>
    <string name="datePattern">dd/MM/yyy HH:mm:ss</string>
    <string name="user_panel">User Panel</string>
    <string name="task_id">Task ID:</string>
    <string name="xp">XP</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="is_picked">is picked:</string>
    <string name="is_completed">is completed:</string>
    <string name="finish_task">Finish Task</string>
    <string name="give_up">Give Up</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="never">Never</string>
    <string name="no_tasks">No tasks avalible at the moment</string>

    <string-array name="tasks">
        <item>Eat something healthy</item>
        <item>Go to sleep early</item>
        <item>Read a book</item>
        <item>Learn something new</item>
        <item>Learn some words in foreign language</item>
        <item>Clean your room</item>
        <item>Take a relaxing bath</item>
        <item>Do some exercises</item>
        <item>Do a laundry</item>
        <item>Call your friends</item>
    </string-array>

</resources>