<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent" android:layout_width="match_parent"
    android:orientation="vertical">

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/date_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_display_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2020"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/date_display_date"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="17 Jan"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="55sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_display_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sunday"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>

<LinearLayout
android:id="@+id/calendar_header"
android:layout_width="match_parent"
android:layout_height="30dp"
android:gravity="center_vertical"
android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/mon"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:text="@string/tue"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:text="@string/wen"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:text="@string/thu"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:text="@string/fri"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:text="@string/sat"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="viewStart"
        android:text="@string/sun"
        android:textColor="@color/colorAccent" />

</LinearLayout>

<GridView
android:id="@+id/calendar_grid"
android:layout_width="match_parent"
android:layout_height="240dp"
android:numColumns="7"/>

    <Button
        android:id="@+id/CL_startIsolationButton"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_marginHorizontal="15sp"
        android:layout_marginVertical="10sp"
        android:text="@string/startIsolation"
        android:textSize="24sp" />

    <Button
        android:id="@+id/CL_stopIsolationButton"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_marginHorizontal="15sp"
        android:layout_marginVertical="10sp"
        android:text="@string/stopIsolation"
        android:textSize="24sp" />

</LinearLayout>